--- a/views/reserves.ejs
+++ b/views/reserves.ejs
@@ -88,7 +88,7 @@
                     <% reserves.forEach(reserv => { %>
                         <tr>
                             <td>
-                                <%= reserv.Id %>
+                                <%= reserv.SalleName %>
                             </td>
                             <td>
                                 <%= reserv.Nom %>
